# llmgenie

./: .gitignore  CONTEXT_HANDOFF_PHASE4A_MCP_COMPLETE.md  CONTEXT_RESTORATION_STRUCT_TOOLS.md  CONTEXT_RESTORE.md  CURSOR_RESTART_CHECKPOINT_2025-01-05.md  LICENSE  MCP_OPTIMIZATION_REPORT.md  Makefile  PHASE_4A_HANDOFF.md  PHASE_4A_RESTORATION_GUIDE.md  PRACTICAL_HANDOFF.md  PR_KNOWLEDGE_BASE.md  README.md  STRUCT_TOOLS_IMPLEMENTATION_REPORT.md  architecture_report.md  docker-strategy.md  meta_files.txt  meta_links.txt  project_state.json  requirements.txt  requirements_fixed.txt  rules_manifest.json  struct.json  temp_checklist_archive_analysis.md  test_handoff_validation.py  test_mcp_tools.py
restructure/: POST_RESTRUCTURE_FINAL_REPORT.md  project_restructure_checklist.md  project_state.json  pyproject.toml
restructure/.cursor/: mcp_test.json
restructure/.cursor/rules/core/: 001_ai_best_practices.mdc  (+5 more)
restructure/core/rag_context/: __init__.py  cli_interface.py  code_discovery.py
restructure/core/struct_tools/: __init__.py  cli_interface.py
restructure/docs/: IMPLEMENTATION_PLAN_MULTIAGENT.md  ai_models_comparison_june_2025.md  phase_2b_latency_benchmark.json  phase_2d_architecture_design.md  phase_4A_MCP_INTEGRATION_PLAN.md  struct_tools_README.md
restructure/docs/archive/: docs.json  index.md
restructure/docs/archive_analysis/: 00_file_inventory.md
restructure/docs/guides/: HANDOFF_VALIDATION_GUIDE.md  api_usage.md  setup_guide.md
restructure/docs/index/: insights.json  knowledge_base_analysis.json  log_data.json
restructure/docs/knowledge/: README.md  copilot.md  copilot_integration.md  mistral.md  user_contribution_guide.md
restructure/docs/mamay_onboarding/: АРГУМЕНТЫ_ПРОТИВ_ИНВЕСТОРОВ.md  ДОКЛАД_ПРОЕКТ_МАМАЙ.md
restructure/docs/notes/: chatgpt_mcp.txt  cursor_rules_real_usage.md
restructure/docs/orchestration/: PHASE_3_2_MODULAR_TESTING_RESULTS.md
restructure/docs/plans/: phase_4a1_rag_context_plan.md  universal_rag_interfaces_plan.md
restructure/docs/solutions/: universal_rag_interfaces_solution.md
restructure/docs/standards/: ai_integration_strategy.md  automation_tools_design.md  commit_message_template.md  cross_reference_standards.md  index.md
restructure/docs/taskrouter/: README.md  user_guide.md
restructure/docs/workflows/: index.md
restructure/tests/: test_api.py  test_cli.py  test_ollama_function_calling.py  test_self_refine_pipeline.py
restructure/tests/.llmstruct_index/: test_cli.ast.json  test_cli.struct.json  test_ollama_function_calling.struct.json  test_orchestration_e2e.struct.json  test_orchestration_integration.ast.json  test_orchestration_integration.struct.json  test_orchestration_parallel.ast.json  test_self_refine_pipeline.ast.json  test_smoke.ast.json  test_task_router.ast.json  test_task_router.struct.json
(+1103 files in other folders)
